Fixing the Slack CTA footer row which was causing the horizontal scroll due to flexbox

--- a/docs/_sass/_footer.scss
+++ b/docs/_sass/_footer.scss
@@ -23,9 +23,11 @@
     background: linear-gradient(to right, #0071c7 0%,#00b49d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     text-align: center;
     padding: 15px 0;
-    height: 130px;
-    display: flex;
     align-items: center;
+
+    .row {
+      padding: 30px 0;
+    }
 
     p {
       color: #fff;
